--- a/swapi-test-next/styles/Home.module.scss
+++ b/swapi-test-next/styles/Home.module.scss
@@ -1,8 +1,38 @@
 @import "mixins";
 @import './variables.module.scss';
 
+
 .div {
+  margin: 10px 30px 10px 30px;
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  // border: 1px solid $primary-color;
+
   h1 {
-    color: $primary-color;
+    color: $primary-color
+  }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // gap: 12px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    // div {
+    //   justify-content: center;
+    // }
+
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .body {
+    h1 {
+      color: black;
+    }
   }
 }
