--- a/swapi-test-next/styles/Home.module.scss
+++ b/swapi-test-next/styles/Home.module.scss
@@ -14,6 +14,10 @@
     color: $primary-color
   }
 
+  h2 {
+    color: $primary-color
+  }
+
   div {
     display: flex;
     flex-direction: column;
@@ -30,8 +34,12 @@
 }
 
 @media (prefers-color-scheme: light) {
-  .body {
+  .div {
     h1 {
+      color: black;
+    }
+
+    h2 {
       color: black;
     }
   }
