--- a/swapi-test-next/styles/Crawl.module.scss
+++ b/swapi-test-next/styles/Crawl.module.scss
@@ -1,26 +1,71 @@
-/* Animation properties */
-/* .star {
-  animation: star 10s ease-out infinite;
+@import "mixins";
+@import './variables.module.scss';
+
+.body {
+  margin-top: 100px;
+  height: calc(100vh - 200px);
+  width: 100%;
 }
-.wars {
-  animation: wars 10s ease-out infinite;
+
+.postCrawlMain {
+  position: relative;
+  // height: calc(100vh - 200px);
+  height: 100%;
+  width: 100%;
+  transition: all;
 }
-.byline span {
-  animation: spin-letters 10s linear infinite;
+
+
+.enterButton {
+  position: absolute;
+  color: $primary-color;
+  background-color: transparent;
+  border: none;
+  font-family: "ITC Serif Gothic", Lato;
+  font-size: 2.25em;
+  left: -2em;
+  letter-spacing: 0.4em;
+  right: -2em;
+  text-align: center;
+  text-transform: uppercase;
+  top: 30%;
+  margin-left: 30vw;
+  width: 50vw;
+  height: 20vh;
+  border-radius: 50px;
+  transition: all;
+  animation-duration: 8s;
+  animation-name: pulse-yellow;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  box-shadow: 16px 16px 10px #ffffff1a;
+
 }
-.byline {
-  animation: move-byline 10s linear infinite;
-} */
+
+@keyframes pulse-yellow {
+  0% {
+    box-shadow: 6px 9px 6px 8px #ffe81f;
+  }
+
+  100% {
+    box-shadow: -7px -9px 9px 5px #ffe81f;
+  }
+
+}
+
 
 .star {
   animation: star 10s ease-out;
 }
+
 .wars {
   animation: wars 10s ease-out;
 }
+
 .byline span {
   animation: spin-letters 10s linear;
 }
+
 .byline {
   animation: move-byline 10s linear;
 }
@@ -31,13 +76,16 @@
     opacity: 0;
     transform: scale(1.5) translateY(-0.75em);
   }
+
   20% {
     opacity: 1;
   }
+
   89% {
     opacity: 1;
     transform: scale(1);
   }
+
   100% {
     opacity: 0;
     transform: translateZ(-1000em);
@@ -49,13 +97,16 @@
     opacity: 0;
     transform: scale(1.5) translateY(0.5em);
   }
+
   20% {
     opacity: 1;
   }
+
   90% {
     opacity: 1;
     transform: scale(1);
   }
+
   100% {
     opacity: 0;
     transform: translateZ(-1000em);
@@ -63,18 +114,25 @@
 }
 
 @keyframes spin-letters {
-  0%, 10% {
+
+  0%,
+  10% {
     opacity: 0;
     transform: rotateY(90deg);
   }
+
   30% {
     opacity: 1;
   }
-  70%, 86% {
+
+  70%,
+  86% {
     transform: rotateY(0);
     opacity: 1;
   }
-  95%, 100% {
+
+  95%,
+  100% {
     opacity: 0;
   }
 }
@@ -83,40 +141,41 @@
   0% {
     transform: translateZ(5em);
   }
+
   100% {
     transform: translateZ(0);
   }
 }
 
 /* Make the 3D work on the container */
-.starwars-demo {
+.introCrawlMain {
   perspective: 800px;
   transform-style: preserve3d;
 }
 
-/* General styles and layout */
-body {
-  background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
-}
+// /* General styles and layout */
+// .body {
+//   background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
+// }
 
-.starwars-demo {
+.introCrawlMain {
   height: 17em;
   left: 50%;
   position: absolute;
   top: 53%;
   transform: translate(-50%, -50%);
   width: 34em;
+
+  img {
+    width: 100%;
+  }
+
 }
 
-.byline span {
-  display: inline-block;
-}
 
-img {
-  width: 100%;
-}
-
-.star, .wars, .byline {
+.star,
+.wars,
+.byline {
   position: absolute;
 }
 
@@ -138,20 +197,23 @@ img {
   text-align: center;
   text-transform: uppercase;
   top: 29%;
+
+  span {
+    display: inline-block;
+  }
+
 }
 
 /*** Media queries for adjusting to different screen sizes ***/
 
 @media only screen and (max-width: 600px) {
-  .starwars-demo {
+  .introCrawlMain {
     font-size: 10px;
   }
 }
 
 @media only screen and (max-width: 480px) {
-  .starwars-demo {
+  .introCrawlMain {
     font-size: 7px;
   }
 }
-
-
