updating margins, defaulting color to white

--- a/swapi-test-next/components/MoviePage/MoviePageMain.module.scss
+++ b/swapi-test-next/components/MoviePage/MoviePageMain.module.scss
@@ -1,6 +1,7 @@
 @import './variables.module.scss';
 
 .body {
+  margin-top: 100px;
   margin: 10px 30px 10px 30px;
   display: flex;
   flex-direction: column;
