--- a/swapi-test-next/styles/globals.scss
+++ b/swapi-test-next/styles/globals.scss
@@ -6,6 +6,7 @@ body {
     // body {
     //   background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
     // }
+    color: white;
   }
 
 
