fixed light mode issues

--- a/swapi-test-next/components/MoviePage/MoviePageMain.module.scss
+++ b/swapi-test-next/components/MoviePage/MoviePageMain.module.scss
@@ -22,9 +22,9 @@
 }
 
 @media (prefers-color-scheme: light) {
-  .body {
-    h2 {
-      color: black;
-    }
-  }
+  // .body {
+  //   h2 {
+  //     color: black;
+  //   }
+  // }
 }
