--- a/swapi-test-next/styles/Home.module.scss
+++ b/swapi-test-next/styles/Home.module.scss
@@ -2,7 +2,8 @@
 @import './variables.module.scss';
 
 .div {
-  margin: 10px 30px 10px 30px;
+  // margin-top: 100px;
+  margin: 100px 30px 10px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,13 +27,13 @@
 }
 
 @media (prefers-color-scheme: light) {
-  .div {
-    h1 {
-      color: black;
-    }
+  // .div {
+  //   h1 {
+  //     color: black;
+  //   }
 
-    h2 {
-      color: black;
-    }
-  }
+  //   h2 {
+  //     color: black;
+  //   }
+  // }
 }
