--- a/swapi-test-next/styles/Home.module.scss
+++ b/swapi-test-next/styles/Home.module.scss
@@ -1,19 +1,36 @@
 @import "mixins";
 @import './variables.module.scss';
 
+
+
 .div {
+  // display: grid;
+  // grid-template: 1fr 1fr 1fr / 1fr 1fr;
+
   // margin-top: 100px;
-  margin: 100px 30px 10px 30px;
+  margin: 100px 10px 10px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  h1 {
+  h1, h2, h3 {
     color: $primary-color
   }
 
-  h2 {
-    color: $primary-color
+  // h2 {
+  //   color: $primary-color
+  // }
+  .movieGrid {
+    display: grid;
+    grid-template: auto / 1fr 1fr;
+    gap: 30px;
+  }
+
+  .heading {
+    grid-column: 1 / span 2;
+    text-align: center;
+    margin: 50px 0px 30px 0px;
+    // margin-bottom: -200px;
   }
 
   div {
