--- a/swapi-test-next/styles/Home.module.scss
+++ b/swapi-test-next/styles/Home.module.scss
@@ -43,6 +43,14 @@
   }
 }
 
+@include mobile {
+  .div {
+    text-align: center;
+  
+
+  }
+}
+
 @media (prefers-color-scheme: light) {
   // .div {
   //   h1 {
