--- a/swapi-test-next/styles/Search.module.scss
+++ b/swapi-test-next/styles/Search.module.scss
@@ -8,6 +8,11 @@
   // margin: auto;
   text-align: center;
 
+  select {
+    font: inherit;
+    text-align: center;
+  }
+
   p {
     font-size: 18px;
     color: $primary-color;
@@ -20,4 +25,52 @@
   font: inherit;
   font-size: 14px;
   text-align: center;
+}
+
+@include mobile {
+
+  .body {
+    // select * {
+    //   font-size: 12px;
+    //   background-color: white;
+    //   color: $primary-color;
+    // }
+    select {
+      position: relative;
+      font: inherit;
+      font-size: 11px;
+      letter-spacing: 0.1em;
+      text-align: center;
+      background-color: white;
+      color: black;
+      margin-bottom: 20px;
+
+      option {
+
+        font: inherit;
+        background-color: white;
+        color: $primary-color;
+      }
+    }
+
+  //   select:after * {
+  //     position: relative;
+  //     font: inherit;
+  //     font-size: 12px;
+  //     letter-spacing: 0.1em;
+  //     text-align: center;
+  //     background-color: white;
+  //     color: $primary-color;
+  // }
+}
+
+  .searchBox {
+    width: 70vw;
+    height: 5vh;
+    font: inherit;
+    font-size: 12px;
+    text-align: center;
+  }
+  
+
 }
