--- a/swapi-test-next/styles/_mixins.scss
+++ b/swapi-test-next/styles/_mixins.scss
@@ -1,5 +1,17 @@
 @mixin desktop() {
-  @media (max-width: 600px) {
+  @media (min-width: 1024px) {
+    @content;
+  }
+};
+
+@mixin tablet() {
+  @media (min-width: 600px) and (max-width: 1023px) {
+    @content;
+  }
+};
+
+@mixin mobile() {
+  @media (max-width: 599px) {
     @content;
   }
 };
